--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="shortcut icon" type="image/png" href="./birthdayCake.png"/>
 
         <!-- 1. Đây là phần title của website -->
-        <title>Happy Birthday bé iu của anh</title>
+        <title>Happy Birthday Đỗ Thị Thùy Linh</title>
         <link rel="stylesheet" href="./style.css">
         <script>
             window.open = function () {};
